# Sentinel-Orchestra

./: .gitignore  CMakeLists.txt  CTestCustom.cmake  README.md
include/orchestra/: orchestra.hpp
src/: main.cpp  orchestra.cpp  orchestra.h  orchestrator.cpp  simcore_system.cpp  simcore_system.h
tests/: test_convergence.cpp
